# ecohome-energy-advisor

./: .env.example  .gitignore  01_db_setup.ipynb  02_rag_setup.ipynb  03_run_and_evaluate.ipynb  README.md  agent.py  main.py  pyproject.toml  requirements.txt  template.py  tools.py
data/: energy_data.db
data/documents/: energy_storage_optimization.txt  hvac_optimization_strategies.txt  renewable_energy.txt  seasonal_energy.txt  smart_home_auto_tips.txt
models/: energy.py
